--- a/BS_alapok.html
+++ b/BS_alapok.html
@@ -10,10 +10,40 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam iusto, aspernatur rerum aut impedit in natus ea odio iure cupiditate quaerat voluptatibus, quas sint, laudantium blanditiis officiis omnis ipsum. Aspernatur?</p></div>
-            <div class="col"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam iusto, aspernatur rerum aut impedit in natus ea odio iure cupiditate quaerat voluptatibus, quas sint, laudantium blanditiis officiis omnis ipsum. Aspernatur?</p></div>
-            <div class="col"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam iusto, aspernatur rerum aut impedit in natus ea odio iure cupiditate quaerat voluptatibus, quas sint, laudantium blanditiis officiis omnis ipsum. Aspernatur?</p></div>
+            <div class="col-xl 4 col-md-3 p-5"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam iusto, aspernatur rerum aut impedit in natus ea odio iure cupiditate quaerat voluptatibus, quas sint, laudantium blanditiis officiis omnis ipsum. Aspernatur?</p></div>
+            <div class="col-xl 4 col-md-3 p-5"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam iusto, aspernatur rerum aut impedit in natus ea odio iure cupiditate quaerat voluptatibus, quas sint, laudantium blanditiis officiis omnis ipsum. Aspernatur?</p></div>
+            <div class="col-xl 4 col-md-6 p-5"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam iusto, aspernatur rerum aut impedit in natus ea odio iure cupiditate quaerat voluptatibus, quas sint, laudantium blanditiis officiis omnis ipsum. Aspernatur?</p></div>
         </div>
     </div>
+    <div class="container">
+        <table class="table">
+            <tr>
+                <th>1</th>
+                <th>2</th>
+                <th>3</th>
+                <tr>
+                    <td>11</td>
+                    <td>21</td>
+                    <td>31</td>
+                </tr>
+                <tr>
+                    <td>22</td>
+                    <td>23</td>
+                    <td>24</td>
+                </tr>
+            </tr>
+        </table>
+    </div>
+
+    <div class="container mt-5">
+        <div class="row justify-content-end">
+            <div class="col-3"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, illum? Amet ratione, nostrum ducimus, optio quo quod at, incidunt sit error delectus dolores a aliquam deserunt doloribus tenetur reiciendis ab!</p></div>
+        </div>
+        <div class="col-3"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, illum? Amet ratione, nostrum ducimus, optio quo quod at, incidunt sit error delectus dolores a aliquam deserunt doloribus tenetur reiciendis ab!</p></div>
+        </div>
+    </div>
+
+    
+
 </body>
 </html>
